--- a/cyclone-e2e-testing.yml
+++ b/cyclone-e2e-testing.yml
@@ -38,7 +38,7 @@ integration:
     - KAFKA_SERVER_IP=kafka:9092
     - CLAIR_SERVER_IP=clair:6060
     - MONGO_DB_IP=mongo:27017
-    - ETCD_SERVER_IP=etcd:2379
+    - ETCD_SERVER_IP=http://etcd:2379
     - WORK_REGISTRY_LOCATION=localhost:5000
     - WORK_DOCKER_HOST=unix:///var/run/docker.sock
     - DOCKER_HOST=unix:///var/run/docker.sock
